syntax = "proto3";

option java_package = "com.husbylabs.warptables.packets";
option java_multiple_files = true;

message UpdateValue {
    string name = 1;
    int32 id = 2;
}